# openmovement-python

./: .gitignore  LICENSE  README.md  run_omconvert.py  setup.cfg  setup.py
openmovement/: calc_svm.py  calc_wtv.py  cwa_load.py  omconvert.py  run_svm.py  run_wtv.py  timeseries_csv.py
src/: filename_info.py  run_omconvert.py  run_svm.py  run_svm_iter.py  run_wtv.py  run_wtv_iter.py
src/examples/: run_accel_plot.py  run_export_aux.py  run_omconvert.py  run_sensors.py  run_svm.py  run_svm_iter.py  run_wtv.py  run_wtv_iter.py  util_info_from_filename.py
src/notebooks/: run_wtv.ipynb
src/openmovement/: __init__.py  calc_svm.py  calc_svm_iter.py  calc_wtv.py  calc_wtv_iter.py  calibrate.py  cwa_load.py  epoch.py  run_svm.py  run_wtv.py  timeseries_csv.py  wav_load.py  zip_helper.py
src/openmovement/experimental/: calibrate.py  resample.py
src/openmovement/iterator/: calc_svm_iter.py  calc_wtv_iter.py  timeseries_csv_iter.py
src/openmovement/load/: __init__.py  base_data.py  csv_load.py  cwa_load.py  multi_load.py  omx_load.py  wav_load.py  zip_helper.py
src/openmovement/process/: __init__.py  calc_svm.py  calc_wtv.py  calibrate.py  epoch.py  filter.py  omconvert.py  omsynth.py
src/test/: test_steps.py  test_timestamps.py
