[metadata]
name = openmovement
version = 0.0.1
author = Daniel Jackson
description = Open Movement processing code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/digitalinteraction/openmovement-python/
project_urls =
    Bug Tracker = https://github.com/digitalinteraction/openmovement-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = numpy, pandas
python_requires = >=3.6
